--- a/html-css/exercicios/modulo2/ex021/caixa01.html
+++ b/html-css/exercicios/modulo2/ex021/caixa01.html
@@ -6,29 +6,21 @@
     <title>Modelo de Caixas</title>
     <style>
         h1 {
+
             background-color: lightcyan;
             height: 300px;
             width: 300px;
-            border-width: 10px;
-            border-style: solid;
-            border-color: darkcyan;
 
-            padding-top: 10px;
-            padding-right: 10px;
-            padding-bottom: 10px;
-            padding-left: 10px;
+            border: 10px solid darkcyan;
 
-            margin-top: 10px;
-            margin-right: 10px;
-            margin-bottom: 10px;
-            margin-left: 10px;
+            padding: 10px;
+
+            margin: 10px 10px 40px 10px;
+
+            outline: 5px groove black;
         }
-
         a {
-            border-width: 10px;
-            border-style: solid;
-            border-color: red;
-
+            border: 5px solid red;
         }
     </style>
 </head>
