--- a/html-css/exercicios/modulo2/ex021/caixa02.html
+++ b/html-css/exercicios/modulo2/ex021/caixa02.html
@@ -25,7 +25,7 @@
         nav {
             background-color: rgb(129, 105, 74);
             padding: 3px;
-            box-shadow: 3px 4px 6px 1px rgba(0, 0, 0, 0.329);
+            box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.329);
         }
 
         nav > a {
@@ -42,6 +42,8 @@
             margin: 10px 5px 10px 5px;
             padding: 10px;
             border: 3px solid black;
+
+            border-radius: 20px;
         }
 
         article {
@@ -61,6 +63,15 @@
         footer > p {
             color: white;
             margin: 0px;
+        }
+
+        div#bola {
+            height: 100px;
+            width: 100px;
+            background-color: aliceblue;
+            margin: 10px;
+            border-radius: 50%;
+
         }
     </style>
 </head>
@@ -92,5 +103,6 @@
     <footer>
         <p>Desenvolvido por Diogo Sadao Higa Teixeira Correia</p>
     </footer>
+    <div id="bola"></div>
 </body>
 </html>
