atualiza ex022 fundo006

--- a/html-css/exercicios/modulo2/ex022/fundo006.html
+++ b/html-css/exercicios/modulo2/ex022/fundo006.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo</title>
     <style>
         * {
             margin: 0px;
             padding: 0px;
+            font-family: Arial, Helvetica, sans-serif;
         }
 
         body {
+            /* 
             height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
+            background-size: cover;
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
@@ -28,12 +34,28 @@
             margin-top: 40px;
             padding: 5px 10px 5px 10px;
         }
+
+        main > h1 {
+            text-align: center;
+        }
+
+        main > p {
+            text-indent: 20px;
+            text-align: justify;
+        }
     </style>
 </head>
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis cum laborum quae sunt fugit quasi neque maxime a mollitia. Illo itaque exercitationem praesentium dolorum, nisi eos esse inventore aperiam quod! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit sequi vero maiores nobis soluta minus error, facere asperiores, similique, repudiandae voluptates. Esse, et eius. Rerum aperiam asperiores vitae? Voluptates, sapiente. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quas eos quisquam ipsum assumenda ipsam tempora ducimus similique! Aperiam vel amet consectetur recusandae fugiat beatae? Nobis et doloribus repudiandae earum!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis cum laborum quae sunt fugit quasi neque maxime a mollitia. Illo itaque exercitationem praesentium dolorum, nisi eos esse inventore aperiam quod! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit sequi vero maiores nobis soluta minus error, facere asperiores, similique, repudiandae voluptates. Esse, et eius. Rerum aperiam asperiores vitae? Voluptates, sapiente. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quas eos quisquam ipsum assumenda ipsam tempora ducimus similique! Aperiam vel amet consectetur recusandae fugiat beatae? Nobis et doloribus repudiandae earum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit nam nihil ipsam ratione amet perspiciatis magni aut voluptate, pariatur rerum doloremque quia libero omnis accusamus facilis, recusandae reiciendis quaerat sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad delectus animi ut laudantium, officia ipsam non aut omnis a perferendis, fugiat nisi molestias modi quos distinctio tenetur temporibus perspiciatis nihil? Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque omnis cupiditate hic minus ad beatae aliquid nemo dicta? Cumque aperiam, vitae est deleniti quos ratione facilis? Optio quo cumque voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit facere, minima dolorem expedita quidem at corporis in, architecto natus eligendi atque numquam ratione fuga quas possimus magnam voluptas voluptatem temporibus! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse delectus sequi optio dolores quasi commodi soluta accusamus dolorum natus distinctio id laboriosam, similique, odit eveniet recusandae quibusdam omnis, autem labore!
+        Ex, recusandae? Voluptatem dolorem at ex voluptatum ratione, in, vitae veritatis, dolores beatae totam autem. Hic nobis blanditiis nulla iure enim tempore dolor! Natus nisi, expedita eligendi sint harum eius.
+        Sed est at repellendus assumenda expedita cupiditate ut totam cum magnam numquam dolor cumque aliquam dicta non, qui maiores dignissimos nostrum corporis aperiam? Officiis deserunt laboriosam reprehenderit perferendis amet saepe?
+        Ratione porro saepe velit, quidem sed blanditiis iste culpa cumque eum et iusto quis fugit beatae voluptatem voluptates, laborum odit a nobis tempore non eius dignissimos sint aperiam. Sit, sequi?</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis cum laborum quae sunt fugit quasi neque maxime a mollitia. Illo itaque exercitationem praesentium dolorum, nisi eos esse inventore aperiam quod! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit sequi vero maiores nobis soluta minus error, facere asperiores, similique, repudiandae voluptates. Esse, et eius. Rerum aperiam asperiores vitae? Voluptates, sapiente. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quas eos quisquam ipsum assumenda ipsam tempora ducimus similique! Aperiam vel amet consectetur recusandae fugiat beatae? Nobis et doloribus repudiandae earum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit nam nihil ipsam ratione amet perspiciatis magni aut voluptate, pariatur rerum doloremque quia libero omnis accusamus facilis, recusandae reiciendis quaerat sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad delectus animi ut laudantium, officia ipsam non aut omnis a perferendis, fugiat nisi molestias modi quos distinctio tenetur temporibus perspiciatis nihil? Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque omnis cupiditate hic minus ad beatae aliquid nemo dicta? Cumque aperiam, vitae est deleniti quos ratione facilis? Optio quo cumque voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit facere, minima dolorem expedita quidem at corporis in, architecto natus eligendi atque numquam ratione fuga quas possimus magnam voluptas voluptatem temporibus! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse delectus sequi optio dolores quasi commodi soluta accusamus dolorum natus distinctio id laboriosam, similique, odit eveniet recusandae quibusdam omnis, autem labore!
+        Ex, recusandae? Voluptatem dolorem at ex voluptatum ratione, in, vitae veritatis, dolores beatae totam autem. Hic nobis blanditiis nulla iure enim tempore dolor! Natus nisi, expedita eligendi sint harum eius.
+        Sed est at repellendus assumenda expedita cupiditate ut totam cum magnam numquam dolor cumque aliquam dicta non, qui maiores dignissimos nostrum corporis aperiam? Officiis deserunt laboriosam reprehenderit perferendis amet saepe?
+        Ratione porro saepe velit, quidem sed blanditiis iste culpa cumque eum et iusto quis fugit beatae voluptatem voluptates, laborum odit a nobis tempore non eius dignissimos sint aperiam. Sit, sequi?</p>
     </main>
 </body>
 </html>
